# ChangeLog for sys-auth/consolekit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.128 2012/05/28 18:14:18 maekke Exp $

  28 May 2012; Markus Meier <maekke@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild:
  arm stable, bug #416653

  22 May 2012; Jeff Horelick <jdhore@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild:
  marked x86 per bug 416653

  20 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild:
  Regenerate docbook documentation for testsuite wrt #416721

  20 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild:
  Keyword ~alpha/~ia64/~sparc wrt #408967

  20 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild:
  ppc/ppc64 stable wrt #416653

  20 May 2012; Agostino Sarubbo <ago@gentoo.org>
  consolekit-0.4.5_p20120320.ebuild:
  Stable for amd64, wrt bug #416653

  14 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  -consolekit-0.4.5-r2.ebuild, -consolekit-0.4.5-r3.ebuild,
  -files/consolekit-0.4.5-udev-acl.patch,
  -files/consolekit-0.4.5-udev-acl-install_to_usr_and_missing_seat_d_symlink.pa
  tch, -files/consolekit-0.4.5-udev-acl-missing-AC_SUBST.patch:
  old

*consolekit-0.4.5_p20120320 (14 May 2012)

  14 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  +consolekit-0.4.5_p20120320.ebuild,
  +files/consolekit-0.4.5-polkit-automagic.patch,
  +files/consolekit-cleanup_console_tags.patch,
  +files/consolekit-shutdown-reboot-without-policies.patch,
  +files/consolekit-udev-acl-install_to_usr.patch:
  Use snapshot from upstream git to clean up patchset.

  09 May 2012; Alexis Ballier <aballier@gentoo.org> consolekit-0.4.5-r3.ebuild:
  keyword ~amd64-fbsd

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> consolekit-0.4.5-r1.ebuild,
  consolekit-0.4.5-r2.ebuild, consolekit-0.4.5-r3.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig
