@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/Attic/consolekit-0.4.5-r1.ebuild,v 1.9 2012/05/04 18:57:21 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/Attic/consolekit-0.4.5-r1.ebuild,v 1.10 2012/06/30 10:35:54 swift Exp $
 
 EAPI=4
 inherit autotools eutils linux-info multilib pam systemd
@@ -15,14 +15,15 @@ SRC_URI="http://www.freedesktop.org/software/${MY_PN}/dist/${MY_P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sh sparc x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux"
-IUSE="debug doc kernel_linux pam policykit test"
+IUSE="debug doc kernel_linux pam policykit selinux test"
 
 RDEPEND=">=dev-libs/dbus-glib-0.88
 	>=dev-libs/glib-2.20:2
 	sys-libs/zlib
 	x11-libs/libX11
 	pam? ( virtual/pam )
-	policykit? ( >=sys-auth/polkit-0.101-r1 )"
+	policykit? ( >=sys-auth/polkit-0.101-r1 )
+	selinux? ( sec-policy/selinux-consolekit )"
 DEPEND="${RDEPEND}
 	virtual/pkgconfig
 	dev-libs/libxslt
