@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/consolekit-0.4.5_p20120320.ebuild,v 1.9 2012/05/28 18:14:18 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/consolekit-0.4.5_p20120320.ebuild,v 1.10 2012/06/30 10:35:54 swift Exp $
 
 EAPI=4
 inherit autotools eutils linux-info pam systemd
@@ -20,7 +20,7 @@ fi
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha amd64 arm ~hppa ~ia64 ~mips ppc ppc64 ~sh ~sparc x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux"
-IUSE="acl debug doc kernel_linux pam policykit test"
+IUSE="acl debug doc kernel_linux pam policykit selinux test"
 
 RDEPEND=">=dev-libs/dbus-glib-0.98
 	>=dev-libs/glib-2.22
@@ -33,7 +33,8 @@ RDEPEND=">=dev-libs/dbus-glib-0.98
 		!<sys-fs/udev-171-r6[acl]
 		)
 	pam? ( virtual/pam )
-	policykit? ( >=sys-auth/polkit-0.104-r1 )"
+	policykit? ( >=sys-auth/polkit-0.104-r1 )
+	selinux? ( sec-policy/selinux-consolekit )"
 DEPEND="${RDEPEND}
 	dev-libs/libxslt
 	virtual/pkgconfig
